Fix label/input issue and header color contrast
Mostly focused fixes on SourceInput and the Input component in Form.jsx, but it establishes the premise for the rest.
This resulted in a perfect accessibility score by Lighthouse, which is a big improvement from before.
 Changes to be committed:
	modified:   app/components/form/Form.jsx
	modified:   app/components/header.module.css
	modified:   app/components/source/sourceDisplay.js
	modified:   app/components/source/sourceInput.js

--- a/app/components/header.module.css
+++ b/app/components/header.module.css
@@ -23,6 +23,7 @@
     border-radius: 12px;
     padding: 10px;
     background-color: var(--background-secondary);
+    color: var(--foreground-secondary);
 }
 
 .header li > a {
@@ -44,7 +45,7 @@
     padding: 6px 12px;
     border-radius: 4px;
     user-select: none;
-    color: white;
+    color: var(--foreground-secondary);
 }
 
 .header li > a:hover > span {
@@ -58,7 +59,7 @@
 }
 
 .header svg path {
-    fill: white;
+    fill: var(--foreground-secondary);
 }
 
 .header li > a:hover svg path {
